--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "chain": "starknet-devnet --seed 0"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@scaffold-stark/stark-burner": "^0.1.11",
     "@starknet-react/chains": "^3.1.3",
     "@starknet-react/core": "^3.7.4",
     "expo": "~53.0.17",
@@ -39,7 +41,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "starknet": "^7.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
