--- a/package.json
+++ b/package.json
@@ -1,62 +1,32 @@
 {
-  "name": "scaffold-stark-rn",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
+  "name": "ss-rn",
+  "version": "0.0.1",
+  "author": "Q3 Labs",
+  "license": "MIT",
+  "private": true,
+  "workspaces": {
+    "packages": [
+      "packages/snfoundry",
+      "packages/rn"
+    ]
+  },
   "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "expo lint",
-    "chain": "starknet-devnet --seed 0",
-    "postinstall": "patch-package"
+    "chain": "yarn workspace @ss-rn/snfoundry chain",
+    "deploy": "yarn workspace @ss-rn/snfoundry deploy",
+    "deploy:clear": "yarn workspace @ss-rn/snfoundry deploy:clear",
+    "deploy:no-reset": "yarn workspace @ss-rn/snfoundry deploy --no-reset",
+    "verify": "yarn workspace @ss-rn/snfoundry verify",
+    "test": "yarn workspace @ss-rn/snfoundry test",
+    "compile": "yarn workspace @ss-rn/snfoundry compile",
+    "format": "yarn workspace @ss-rn/snfoundry format",
+    "format:check": "yarn workspace @ss-rn/snfoundry format:check",
+    "start": "yarn workspace @ss-rn/rn start",
+    "prepare": "husky",
+    "postinstall": "yarn workspace @ss-rn/rn postinstall && yarn workspace @ss-rn/snfoundry postinstall"
   },
-  "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
-    "@scaffold-stark/stark-burner": "^0.1.11",
-    "@starknet-react/chains": "^3.1.3",
-    "@starknet-react/core": "^3.7.4",
-    "expo": "~53.0.17",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.3",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
-    "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "starknet": "^7.6.2"
-  },
+  "packageManager": "yarn@3.2.3",
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
-    "patch-package": "^8.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3"
-  },
-  "resolutions": {
-    "@noble/hashes": "1.8.0"
-  },
-  "private": true
+    "husky": "^9.0.11",
+    "prettier": "^3.2.5"
+  }
 }
