--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "devDependencies": {
     "husky": "^9.0.11",
     "prettier": "^3.2.5"
+  },
+  "resolutions": {
+    "@noble/hashes": "1.8.0"
   }
 }
