--- a/packages/rn/package.json
+++ b/packages/rn/package.json
@@ -2,6 +2,15 @@
   "name": "@ss-rn/rn",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "overrides": {
+    "chalk": "5.3.0",
+    "strip-ansi": "7.1.0",
+    "color-convert": "2.0.1",
+    "color-name": "1.1.4",
+    "is-core-module": "2.13.1",
+    "error-ex": "1.3.2",
+    "has-ansi": "5.0.1"
+  },
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
