--- a/packages/snfoundry/package.json
+++ b/packages/snfoundry/package.json
@@ -1,6 +1,15 @@
 {
   "name": "@ss-rn/snfoundry",
   "version": "0.0.1",
+  "overrides": {
+    "chalk": "5.3.0",
+    "strip-ansi": "7.1.0",
+    "color-convert": "2.0.1",
+    "color-name": "1.1.4",
+    "is-core-module": "2.13.1",
+    "error-ex": "1.3.2",
+    "has-ansi": "5.0.1"
+  },
   "scripts": {
     "chain": "starknet-devnet --seed 0",
     "deploy": "ts-node scripts-ts/helpers/deploy-wrapper.ts",
