--- a/packages/rn/package.json
+++ b/packages/rn/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native": "^7.1.6",
     "@scaffold-stark/stark-burner": "^0.1.11",
     "@starknet-react/chains": "^5.0.1",
-    "@starknet-react/core": "^5.0.1",
+    "@starknet-react/core": "^3.7.4",
     "@tanstack/react-query": "^5.87.1",
     "expo": "^53.0.17",
     "expo-blur": "~14.1.5",
@@ -28,6 +28,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "^2.3.2",
+    "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~7.1.7",
     "expo-router": "^5.1.3",
     "expo-splash-screen": "~0.30.10",
