--- a/packages/rn/package.json
+++ b/packages/rn/package.json
@@ -47,6 +47,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-worklets": "^0.5.1",
     "starknet": "^7.6.4",
     "zustand": "^5.0.8"
   },
