--- a/packages/rn/package.json
+++ b/packages/rn/package.json
@@ -25,9 +25,9 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@scaffold-stark/stark-burner": "^0.1.11",
-    "@starknet-react/chains": "^3.1.3",
-    "@starknet-react/core": "^3.7.4",
+    "@scaffold-stark/stark-burner": "^0.1.13",
+    "@starknet-react/chains": "^5.0.1",
+    "@starknet-react/core": "^5.0.1",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -51,7 +51,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "starknet": "^7.6.2"
+    "react-native-worklets": "^0.5.1",
+    "starknet": "^8.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
