--- a/packages/snfoundry/contracts/Scarb.toml
+++ b/packages/snfoundry/contracts/Scarb.toml
@@ -6,14 +6,14 @@ edition = "2024_07"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-starknet = "2.11.4"
-openzeppelin_access = "1.0.0"
-openzeppelin_token = "1.0.0"
+starknet = ">=2.12.2"
+openzeppelin_access = ">=2.0.0"
+openzeppelin_token = ">=2.0.0"
 
 [dev-dependencies]
-openzeppelin_utils = "1.0.0"
-openzeppelin_testing = "4.1.0"
-snforge_std = "0.44.0"
+openzeppelin_utils = ">=2.0.0"
+openzeppelin_testing = ">=4.6.0"
+snforge_std = ">=0.49.0"
 
 [[target.starknet-contract]]
 casm = true # taggle this to `false` to speed up compilation/script tests
@@ -28,8 +28,9 @@ sort-module-level-items = true
 
 [[tool.snforge.fork]]
 name = "SEPOLIA_LATEST"
-url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_8"
+url = "https://starknet-sepolia.g.alchemy.com/starknet/version/rpc/v0_9/_hKu4IgnPgrF8O82GLuYU"
 block_id.tag = "latest"
 
 [tool]
 panic-backtrace = true
+
