--- a/packages/snfoundry/package.json
+++ b/packages/snfoundry/package.json
@@ -1,6 +1,20 @@
 {
   "name": "@ss-rn/snfoundry",
   "version": "0.0.1",
+  "scripts": {
+    "chain": "starknet-devnet --seed 0",
+    "deploy": "ts-node scripts-ts/helpers/deploy-wrapper.ts",
+    "deploy:clear": "cd deployments && node clear.mjs $* && cd .. && ts-node scripts-ts/helpers/deploy-wrapper.ts $*",
+    "deploy:no-reset": "yarn workspace @ss-rn/snfoundry deploy --no-reset",
+    "test": "cd contracts && snforge test",
+    "test-eslint": "node eslint-contract-name/eslint-plugin-contract-names.test.js",
+    "compile": "ts-node scripts-ts/compile.ts",
+    "format": "prettier --write 'scripts-ts/**/*.{ts,tsx}' && cd contracts && scarb fmt",
+    "format:check": "prettier --check 'scripts-ts/**/*.{ts,tsx}' && cd contracts && scarb fmt --check",
+    "postinstall": "shx cp -n .env.example .env",
+    "verify": "ts-node scripts-ts/verify-contracts.ts",
+    "clean": "cd contracts && scarb clean && cd ../deployments && node clear.mjs"
+  },
   "overrides": {
     "chalk": "5.3.0",
     "strip-ansi": "7.1.0",
@@ -9,19 +23,6 @@
     "is-core-module": "2.13.1",
     "error-ex": "1.3.2",
     "has-ansi": "5.0.1"
-  },
-  "scripts": {
-    "chain": "starknet-devnet --seed 0",
-    "deploy": "ts-node scripts-ts/helpers/deploy-wrapper.ts",
-    "deploy:clear": "cd deployments && node clear.mjs $* && cd .. && ts-node scripts-ts/helpers/deploy-wrapper.ts $*",
-    "deploy:no-reset": "yarn workspace @ss-rn/snfoundry deploy --no-reset",
-    "test": "cd contracts && snforge test",
-    "test-eslint": "node eslint-contract-name/eslint-plugin-contract-names.test.js",
-    "compile": "cd contracts && scarb build",
-    "format": "prettier --write 'scripts-ts/**/*.{ts,tsx}' && cd contracts && scarb fmt",
-    "format:check": "prettier --check 'scripts-ts/**/*.{ts,tsx}' && cd contracts && scarb fmt --check",
-    "postinstall": "shx cp -n .env.example .env",
-    "verify": "ts-node scripts-ts/verify-contracts.ts"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -35,10 +36,11 @@
     "yargs": "^17.7.2"
   },
   "dependencies": {
+    "chalk": "^5.4.1",
     "dotenv": "^16.3.1",
     "envfile": "^6.18.0",
     "prettier": "^2.8.8",
-    "starknet": "^7.5.0",
+    "starknet": "8.5.3",
     "toml": "^3.0.0",
     "tslib": "^2.6.2"
   },
