--- a/packages/rn/package.json
+++ b/packages/rn/package.json
@@ -32,8 +32,10 @@
     "@starknet-react/chains": "^5.0.1",
     "@starknet-react/core": "^5.0.1",
     "@tanstack/react-query": "^5.87.1",
+    "blo": "^2.0.0",
     "expo": "~53.0.17",
     "expo-blur": "~14.1.5",
+    "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
