--- a/packages/rn/app.json
+++ b/packages/rn/app.json
@@ -83,7 +83,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
