--- a/packages/rn/package.json
+++ b/packages/rn/package.json
@@ -24,6 +24,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@cartridge/connector": "^0.10.5",
+    "@cartridge/controller": "^0.10.5",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.6",
