--- a/packages/rn/package.json
+++ b/packages/rn/package.json
@@ -52,6 +52,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
     "nativewind": "^4.1.23",
+    "qs": "^6.11.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
@@ -71,6 +72,7 @@
     "@tanstack/eslint-plugin-query": "^5.86.0",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
+    "@types/qs": "^6",
     "@types/react": "~19.1.10",
     "abi-wan-kanabi": "^2.2.4",
     "eslint": "^9.25.0",
