feat: integrate compatible Ready Wallet connector with InjectedConnector

--- a/packages/rn/app.json
+++ b/packages/rn/app.json
@@ -9,14 +9,35 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "LSApplicationQueriesSchemes": [
+          "argent",
+          "argentx",
+          "argentmobile",
+          "ready"
+        ]
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "data": [
+            { "scheme": "ready" },
+            { "scheme": "argent" },
+            { "scheme": "argentx" },
+            { "scheme": "argentmobile" },
+            { "scheme": "wc" }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
     },
     "web": {
       "bundler": "metro",
