--- a/packages/rn/package.json
+++ b/packages/rn/package.json
@@ -27,6 +27,8 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.6",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -34,8 +36,13 @@
     "@starknet-react/chains": "^5.0.1",
     "@starknet-react/core": "^5.0.1",
     "@tanstack/react-query": "^5.87.1",
+    "@walletconnect/core": "^2.21.9",
+    "@walletconnect/react-native-compat": "^2.21.9",
+    "@walletconnect/types": "^2.21.9",
+    "@walletconnect/universal-provider": "^2.21.9",
     "blo": "^2.0.0",
     "expo": "^54.0.0",
+    "expo-application": "^7.0.7",
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
@@ -50,11 +57,13 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "fast-text-encoding": "^1.0.6",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -69,8 +78,10 @@
     "@babel/core": "^7.25.2",
     "@tanstack/eslint-plugin-query": "^5.86.0",
     "@testing-library/react-native": "^13.3.3",
+    "@types/fast-text-encoding": "^1",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.10",
+    "@types/react-native-get-random-values": "^1",
     "abi-wan-kanabi": "^2.2.4",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
