--- a/packages/rn/package.json
+++ b/packages/rn/package.json
@@ -24,6 +24,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@cavos/aegis": "^0.1.5",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.6",
@@ -45,12 +46,14 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.8",
+    "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
     "nativewind": "^4.1.23",
+    "qs": "^6.11.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
@@ -70,6 +73,7 @@
     "@tanstack/eslint-plugin-query": "^5.86.0",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
+    "@types/qs": "^6",
     "@types/react": "~19.1.10",
     "abi-wan-kanabi": "^2.2.4",
     "eslint": "^9.25.0",
