--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "yarn workspace @ss-rn/snfoundry test",
     "test:rn": "yarn workspace @ss-rn/rn test",
     "compile": "yarn workspace @ss-rn/snfoundry compile",
-    "format": "yarn workspace @ss-rn/snfoundry format",
+    "format": "yarn workspace @ss-rn/snfoundry format && yarn workspace @ss-rn/rn format",
     "format:check": "yarn workspace @ss-rn/snfoundry format:check",
     "start": "yarn workspace @ss-rn/rn start",
     "start:ios": "yarn workspace @ss-rn/rn start --ios",
